--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,12 @@ python = "^3.11"
 scipy = "^1.13.0"
 rasterio = "^1.3.10"
 geopandas = "^0.14.4"
+typer = "^0.12.3"
 
+
+[tool.poetry.group.dev.dependencies]
+isort = "^5.13.2"
+ipython = "^8.24.0"
 
 [build-system]
 requires = ["poetry-core"]
