--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ scipy = "^1.13.0"
 rasterio = "^1.3.10"
 geopandas = "^0.14.4"
 typer = "^0.12.3"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
