--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ rasterio = "^1.3.10"
 geopandas = "^0.14.4"
 typer = "^0.12.3"
 requests = "^2.31.0"
+rich = "^13.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
