--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
-    "numpy (>=2.2.3,<3.0.0)",
+    "numpy (>=2.0.1,<2.1.0)",
     "scipy (>=1.15.2,<2.0.0)",
     "ipython (>=9.0.1,<10.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
@@ -23,6 +23,9 @@ dependencies = [
 packages = [
     {include = "surfaces", from = "williston-basin"}
 ]
+
+[tool.poetry.scripts]
+surfaces = "surfaces:app"
 
 
 [tool.poetry.group.dev.dependencies]
