Created naïve cross sections

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ dependencies = [
     "geopandas (>=1.0.1,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "rich (>=13.9.4,<14.0.0)",
-    "rasterio (>=1.4.3,<2.0.0)"
+    "rasterio (>=1.4.3,<2.0.0)",
+    "matplotlib (>=3.10.1,<4.0.0)",
+    "itermplot (==0.5)",
+    "pyproj (>=3.7.1,<4.0.0)"
 ]
 
 [tool.poetry]
